--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=5.6",
     "contao/core-bundle":"~3.5",
-    "contao-community-alliance/composer-plugin":"~2.4 || ~3.0",
+    "contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
   },
   "extra": {
     "contao": {
