Add  description to composer.json (close #29)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "contaobayern/contao-member-contact-settings",
-  "description": "",
+  "description": "Member contact settings extension for Contao Open Source CMS",
   "keywords": ["contao", "registration", "member", "mandatory fields", "dependent fields"],
   "type": "contao-module",
   "license": "LGPL-3.0",
