Update license identifier

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Member contact settings extension for Contao Open Source CMS",
   "keywords": ["contao", "registration", "member", "mandatory fields", "dependent fields"],
   "type": "contao-module",
-  "license": "LGPL-3.0",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Jörg Moldenhauer",
